k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calculator
  template:
    metadata:
      labels:
        app: calculator
    spec:
      containers:
      - name: calculator
        image: ddgrid.azurecr.io/calculator:0.8
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 3Gi
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: calculator
spec:
  selector:
    app: calculator
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
---
# ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calculator
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - calculator.grid.demanddriventech.com
    secretName: ingres-tls
  rules:
  - host: calculator.grid.demanddriventech.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: calculator
            port:
              number: 80
